<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"

	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".MainActivity">

	<TextView
		android:id="@+id/text_ip"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textAlignment="center"
		android:text="@string/text_none"/>

	<TextView
		android:id="@+id/text_current_device"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textAlignment="center"
		android:textSize="30dp"
		android:text="@string/text_none"/>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:orientation="horizontal">

		<Button
			android:id="@+id/button_add_device"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/button_add_device_label"/>

		<Button
			android:id="@+id/button_choose_device"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/button_choose_device_label"/>

		<Button
			android:id="@+id/button_remove_device"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/button_remove_device_label"/>

	</LinearLayout>

	<LinearLayout
		android:id="@+id/layout_humidity"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:padding="10dp">

		<TextView
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:text="@string/text_humidity_label"
			android:textSize="20dp"/>

		<TextView
			android:id="@+id/text_humidity"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:text="@string/text_none"
			android:textSize="20dp"/>

	</LinearLayout>

	<LinearLayout
		android:id="@+id/layout_light"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:padding="10dp">

		<TextView
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:text="@string/text_light_label"
			android:textSize="20dp"/>

		<TextView
			android:id="@+id/text_light"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:text="@string/text_none"
			android:textSize="20dp"/>

	</LinearLayout>

	<LinearLayout
		android:id="@+id/layout_temperature"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:padding="10dp">

		<TextView
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:text="@string/text_temperature_label"
			android:textSize="20dp"/>

		<TextView
			android:id="@+id/text_temperature"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:text="@string/text_none"
			android:textSize="20dp"/>

	</LinearLayout>

	<LinearLayout
		android:id="@+id/layout_water"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:padding="10dp">

		<TextView
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:text="@string/text_water_label"
			android:textSize="20dp"/>

		<TextView
			android:id="@+id/text_water"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:text="@string/text_none"
			android:textSize="20dp"/>

	</LinearLayout>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:orientation="horizontal">

		<Button
			android:id="@+id/button_get_measurements"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/button_get_measurements_label"/>

		<Button
			android:id="@+id/button_do_watering"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/button_do_watering_label"/>

	</LinearLayout>

	<com.github.mikephil.charting.charts.BarChart
		android:id="@+id/barchart"
		android:layout_width="match_parent"
		android:layout_height="match_parent"/>

</LinearLayout>
